--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "type": "module",
   "name": "3-sprint-mission-fe",
+  "scripts": {
+    "doc": "jsdoc -c jsdoc.json"
+  },
   "packageManager": "yarn@4.5.0",
   "dependencies": {
     "global": "^4.4.0",
