chore: add gh-pages package

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "type": "module",
   "name": "3-sprint-mission-fe",
   "scripts": {
-    "doc": "jsdoc -c jsdoc.json",
-    "test": "node ./src/apis/main.js"
+    "docs": "jsdoc -c jsdoc.json",
+    "test": "node ./src/apis/main.js",
+    "predeploy": "yarn docs",
+    "deploy": "gh-pages -d docs"
   },
+  "homepage": "https://dani784601.github.id/3-sprint-mission-fe",
   "packageManager": "yarn@4.5.0",
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "jsdoc": "^4.0.3",
     "tidy-jsdoc": "^1.4.1"
   }
