--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "predeploy": "yarn docs",
     "deploy": "gh-pages -d docs"
   },
-  "homepage": "https://dani784601.github.id/3-sprint-mission-fe",
+  "homepage": "https://dani784601.github.io/3-sprint-mission-fe",
   "packageManager": "yarn@4.5.0",
   "devDependencies": {
     "gh-pages": "^6.2.0",
