--- a/.editorconfig
+++ b/.editorconfig
@@ -3,8 +3,10 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
-[*.{js,json,yml}]
+[*.{js,json,yml,html,css}]
 charset = utf-8
 indent_style = space
 indent_size = 2
+max_line_length = 100
