🧑‍💻 Chore(husky): automate linting and formatting
Commit 시마다 ESLint Linting 및 Prettier Formatting을 자동으로 수행하도록 설정

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,10 @@
-# Ignore artifacts:
-build
-coverage
+# Build artifacts
+.next/
+.turbo/
+_next/
+__tmp__/
+dist/
+target/
+compiled/
+build/
+coverage/
