--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "lint": "eslint src './src/**/*.{ts,tsx,js,jsx}' && next lint",
+    "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}' && next lint",
+    "prepare": "husky install",
+    "postinstall": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,scss}": [
+      "prettier --write",
+      "eslint --fix",
+      "next lint"
+    ]
   },
   "dependencies": {
     "next": "^14.2.15",
@@ -21,6 +33,8 @@
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-css-order": "^2.1.2",
