--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     ]
   },
   "dependencies": {
-    "next": "^14.2.15",
+    "ky": "^1.7.2",
+    "next": "^14.2.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "@types/node": "^22.7.8",
-    "@types/react": "^18.3.11",
+    "@svgr/webpack": "^8.1.0",
+    "@types/node": "^22.7.9",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.0",
