--- a/product/package.json
+++ b/product/package.json
@@ -9,6 +9,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
