--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
+    "jotai": "^2.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recoil": "^0.7.7",
     "styled-components": "^6.1.13",
     "styled-reset": "^4.5.2"
   },
