--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "react-router-dom": "^6.27.0",
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2",
     "typescript": "~5.6.2",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-plugin-image-optimizer": "^1.1.8",
+    "vite-plugin-lqip": "^0.0.5"
   }
 }
