feat: Add search input and sort selection components; enhance footer layout and styles

--- a/biome.json
+++ b/biome.json
@@ -27,5 +27,13 @@
       "enabled": true,
       "quoteStyle": "single"
     }
+  },
+  "css": {
+    "linter": {
+      "enabled": true
+    },
+    "formatter": {
+      "enabled": true
+    }
   }
 }
