--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "push": "git push origin react-함헌규-sprint5"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -46,7 +47,9 @@
     "globals": "^15.9.0",
     "prop-types": "^15.8.1",
     "storybook": "^8.3.6",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.11.0"
   },
   "eslintConfig": {
     "extends": [
