--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jotai": "^2.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13",
     "styled-reset": "^4.5.2"
   },
@@ -47,9 +48,9 @@
     "globals": "^15.9.0",
     "prop-types": "^15.8.1",
     "storybook": "^8.3.6",
-    "vite": "^5.4.8",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0"
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.8"
   },
   "eslintConfig": {
     "extends": [
