1102 : 코드리뷰 일부반영

--- a/react-psh-sprint5/.gitignore
+++ b/react-psh-sprint5/.gitignore
@@ -8,10 +8,13 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+./react-psh-sprint5/node_modules/
+./express-psh-sprint6/node_modules/
 dist
 dist-ssr
 *.local
 
+./express-psh-sprint6/env.js
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
