--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+/react-psh-sprint5/node_modules/
+/express-psh-sprint6/node_modules/
+/express-psh-sprint6/env.js/
 dist
 dist-ssr
 *.local
