--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 /react-psh-sprint5/node_modules/
 /express-psh-sprint6/node_modules/
 /express-psh-sprint6/env.js
+/react-psh-sprint5/src/features/api/url.jsx
 dist
 dist-ssr
 *.local
