--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.8",
     "clsx": "^2.1.1",
+    "jotai": "^2.10.3",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
