--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
