🚧 Chore(project): initial settings

--- a/.prettierrc
+++ b/.prettierrc
@@ -18,77 +18,29 @@
     "prettier-plugin-tailwindcss"
   ],
   "importOrder": [
+		"<TYPES>",
     "^(react/(.*)$)|^(react$)",
     "^(next/(.*)$)|^(next$)",
     "^@vercel/(.*)$",
     "<THIRD_PARTY_MODULES>",
-    "^@/app$",
-    "^@/app/providers$",
-    "^@/app/providers/(.*)$",
-    "^@/app/styles$",
-    "^@/app/styles/(.*)$",
-    "^@/app/types$",
-    "^@/app/types/(.*)$",
-    "^@/app/(.*)$",
-    "^@/pages$",
-    "^@/pages/api$",
-    "^@/pages/api/(.*)$",
-    "^@/pages/(.*)$",
-    "^@/widgets$",
-    "^@/widgets/(.*)$",
-    "^@/features$",
-    "^@/features/([^/]+)/ui$",
-    "^@/features/([^/]+)/ui/(.*)$",
-    "^@/features/([^/]+)/model$",
-    "^@/features/([^/]+)/model/(.*)$",
-    "^@/features/([^/]+)/api$",
-    "^@/features/([^/]+)/api/(.*)$",
-    "^@/features/([^/]+)/lib$",
-    "^@/features/([^/]+)/lib/(.*)$",
-    "^@/features/([^/]+)/config$",
-    "^@/features/([^/]+)/config/(.*)$",
-    "^@/features/(.*)$",
-    "^@/entities$",
-    "^@/entities/([^/]+)/ui$",
-    "^@/entities/([^/]+)/ui/(.*)$",
-    "^@/entities/([^/]+)/model$",
-    "^@/entities/([^/]+)/model/(.*)$",
-    "^@/entities/([^/]+)/api$",
-    "^@/entities/([^/]+)/api/(.*)$",
-    "^@/entities/([^/]+)/lib$",
-    "^@/entities/([^/]+)/lib/(.*)$",
-    "^@/entities/([^/]+)/config$",
-    "^@/entities/([^/]+)/config/(.*)$",
-    "^@/entities/(.*)$",
-    "^@/shared$",
-    "^@/shared/api$",
-    "^@/shared/api/(.*)$",
-    "^@/shared/config$",
-    "^@/shared/config/(.*)$",
-    "^@/shared/lib$",
-    "^@/shared/lib/(.*)$",
-    "^@/shared/ui$",
-    "^@/shared/ui/(.*)$",
-    "^@/shared/hooks$",
-    "^@/shared/hooks/(.*)$",
-    "^@/shared/types$",
-    "^@/shared/types/(.*)$",
-    "^@/shared/assets$",
-    "^@/shared/assets/(.*)$",
-    "^@/shared/(.*)$",
-    "^@constants/(.*)$",
-    "^@layouts/(.*)$",
-    "^@styles/(.*)$",
-    "^@public/(.*)$",
-    "^@testing-library/(.*)$",
-    "^@storybook/(.*)$",
+    "^@app$",
+    "^(@api|@api|@features|@hooks|@lib|@constants|@swr|@utils|@styles|@types)$",
+    "^(@api|@api|@features|@hooks|@lib|@constants|@swr|@utils|@styles|@types)(/.*)$",
+    "^(@shared|@config)$",
+    "^(@shared|@config)(/.*)$",
+    "^(@assets)$",
+    "^(@assets)(/.*)$",
+    "^(@components)$",
+    "^(@components)(/.*)$",
+    "^(@commonui|@layout|@ui)$",
+    "^(@commonui|@layout|@ui)(/.*)$",
+    "^(@pages)$",
+    "^(@pages)(/.*)$",
+    "^(@public)$",
+    "^(@public)(/.*)$",
     "^[.]"
   ],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true,
-  "importOrderBuiltinModulesToTop": true,
-  "importOrderMergeDuplicateImports": true,
-  "importOrderCombineTypeAndValueImports": true,
   "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
+  "importOrderTypeScriptVersion": "5.0.0",
   "tailwindConfig": "./tailwind.config.ts"
 }
