--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,24 +38,32 @@
       "@constants/*": ["src/app/lib/constants/*"],
       "@swr": ["src/app/lib/swr"],
       "@swr/*": ["src/app/lib/swr/*"],
+      "@prisma": ["src/app/lib/prisma"],
+      "@prisma/*": ["src/app/lib/prisma/*"],
       "@utils": ["src/app/lib/utils"],
       "@utils/*": ["src/app/lib/utils/*"],
       "@styles": ["src/app/styles"],
       "@styles/*": ["src/app/styles/*"],
       "@types": ["src/app/types"],
       "@types/*": ["src/app/types/*"],
-      "@components": ["src/components"],
-      "@components/*": ["src/components/*"],
-      "@commonui": ["src/components/common"],
-      "@commonui/*": ["src/components/common/*"],
-      "@ui": ["src/components/ui"],
-      "@ui/*": ["src/components/ui/*"],
       "@shared": ["src/shared"],
       "@shared/*": ["src/shared/*"],
       "@config": ["src/shared/config"],
       "@config/*": ["src/shared/config/*"],
+      "@assets": ["src/assets"],
+      "@assets/*": ["src/assets/*"],
+      "@components": ["src/components"],
+      "@components/*": ["src/components/*"],
+      "@commonui": ["src/components/common"],
+      "@commonui/*": ["src/components/common/*"],
+      "@layout": ["src/components/layout"],
+      "@layout/*": ["src/components/layout/*"],
+      "@ui": ["src/components/ui"],
+      "@ui/*": ["src/components/ui/*"],
+      "@pages": ["src/pages"],
+      "@pages/*": ["src/pages/*"],
       "@public": ["./public"],
-      "@public/*": ["./public/*"]
+      "@public/*": ["./public/*"],
     },
     "target": "ES2017"
   },
