--- a/package.json
+++ b/package.json
@@ -6,27 +6,33 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:lint": "prettier --write src/**/*.{css,js,ts,jsx,tsx,mdx}",
+    "prisma:migrate": "prisma migrate dev --schema src/app/lib/prisma/schema.prisma",
+    "prisma:generate": "prisma generate --schema src/app/lib/prisma/schema.prisma"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "@prisma/client": "^6.0.1",
+    "next": "15.0.4",
+    "prisma": "^6.0.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.49",
-    "prettier": "^3.4.1",
+    "prettier": "^3.4.2",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   }
 }
