--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "15.0.3"
-  }
+  },
+  "proxy": "https://incredible-conkies-2bfde0.netlify.app"
 }
