--- a/next/package.json
+++ b/next/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.8",
     "next": "15.0.3",
+    "prettier": "^3.4.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
