--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,13 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.7",
-    "prisma": "^5.22.0"
+    "prisma": "^6.0.1"
   }
 }
