--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.0",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
