⬆️ Chore(deps): Upgrade Deps

--- a/package.json
+++ b/package.json
@@ -6,33 +6,35 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --no-cache",
     "dev:lint": "prettier --write src/**/*.{css,js,ts,jsx,tsx,mdx}",
     "prisma:migrate": "prisma migrate dev --schema src/app/lib/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema src/app/lib/prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.1",
-    "next": "15.0.4",
-    "prisma": "^6.0.1",
+    "@prisma/client": "^6.1.0",
+    "next": "15.1.1",
+    "prisma": "^6.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@svgr/webpack": "^8.1.0",
-    "@types/node": "^22.10.1",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.4",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.1",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
 }
