chore: next 14버전으로 다운그레이드 및 관련 파일 수정, react-hook-form 및 zustand 설치

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "3-sprint-mission-fe",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,7 +13,9 @@
     "axios": "^1.7.9",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
