--- a/next/package.json
+++ b/next/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query-devtools": "^5.62.8",
     "axios": "^1.7.8",
     "next": "15.0.3",
     "prettier": "^3.4.2",
