--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-jwt": "^8.5.1",
+    "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.7",
     "prisma": "^6.0.1"
