--- a/panda-market/package.json
+++ b/panda-market/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@noonnu/rokaf-sans-medium": "^0.1.0",
     "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
     "next": "15.1.2",
