--- a/panda-market/package.json
+++ b/panda-market/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@noonnu/rokaf-sans-medium": "^0.1.0",
     "@tanstack/react-query": "^5.62.9",
+    "@tanstack/react-query-devtools": "^5.62.9",
     "axios": "^1.7.9",
     "next": "15.1.2",
     "react": "^19.0.0",
