--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
+    "sharp": "^0.33.5",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
